--- a/akce.html
+++ b/akce.html
@@ -43,167 +43,13 @@
 
 <div id="main" class="container">
 	
-<h4>24. září 2017 / Praha, Festival dokumentárních filmů Země na talíři</h4>
-<p>Přijali jsme pozvání do odborné debaty po promítání filmu <a href="https://www.altart.cz/program/buzz-talks-mrtvi-osli-se-hyen-neboji/" target="_blank">Mrtví osli se hyen nebojí</a> o významu půdy a složitém přístupu k ní pro některé obyvatele nejen v rozvojových zemích, ale také v České republice.</p>
-
-<h4>16. září 2017 / Praha, Zažít Karlín jinak - Křižíkova, CooLAND u jednoho stolu</h4>
-<p>Se stánkem “CooLAND u jednoho stolu” jsme se zúčastnili sousedských oslav Zažít Karlín jinak, abychom návštěvníkům připomněli, že jídlo a stav zemědělské krajiny i venkova spolu úzce souvisí.</p>	
-	
-<h4>22. července 2017 / Jindřichovice pod Smrkem, Den otevřených vrat na Rodinné farmě Lukava</h4>
-<p>Den otevřených vrat pro podílníky z KPZ CooLAND a KPZ Mezi domy. Přečtěte si na blogu 
-příspěvek <a href="http://blog.cooland.cz/2ew16f9rt" target="_blank">Život na rodinné ekofarmě? Je to jednoduché, ale není to snadné.</a></p>	
-	
-<h4>30. června 2017 / Říčany, Zahrada hmyzích přátel</h4>
-<p>Exkurze na zahradu, která nabízí příjemný prostor nejen pro lidi, ale zároveň je “ozdravovnou”  pro včely, hmyz a další živočichy z okolí. Přečtěte si na blogu příspěvek <a href="http://blog.cooland.cz/7bpbcfbr4" target="_blank">Zahrada hmyzích přátel</a>.</p>		
-
-<h4>18. června 2017 / Hájek u Kutné Hory, Víkend otevřených vrat na hospodářství Ondřeje Sokače</h4>
-<p>Exkurze na hospodářství Ondřeje Sokače, který se ve spolupráci s námi snaží nastartovat svou novou KPZku. Fotoreportáž z exkurze najdete <a href="https://photos.app.goo.gl/3Kir3zyOXIIkjPUm1" target="_blank">zde</a>.</p>	
-	
-<h4>17. června 2017 / Budyně nad Ohří, Víkend otevřených vrat na statku u Karla Tachecího</h4>
-<p>“Rodina” podílníků kolem statku Karla Tachecího se rozrůstá. Během víkendu otevřených vrat se zde sešlo více než třicet lidí. Fotoreportáž ze setkání najdete <a href="https://goo.gl/photos/MQBH7xuaiBiYRn3K8" target="_blank">zde</a>.</p>	
-	
-<h4>16. června 2017 / Jindřichovice pod Smrkem, Rodinná farma Lukava, natáčení Nedej se</h4>
-<p>CooLAND se podílel na tvorbě dokumentárního filmu o problematice ochrany půdy a zemědělské krajiny a aktivitách <a href="http://nadacepropudu.cz/" target="_blank">Nadace pro půdu</a>, se kterou dlouhodobě spolupracujeme. <a href="http://www.ceskatelevize.cz/porady/1095913550-nedej-se/217562248420014-nadace-pro-pudu/" target="_blank">Snímek s názvem Nadace pro půdu</a> můžete vidět v archivu České televize.</p>
-	
-<h4>30. května - 8. června / Praha, Zvonařka - EnviroCity - komunitní festival pro život na Zvonařce</h4>
-<p>Podílíme se na realizaci komunitního festivalu pro život na Zvonařce, který představuje výsledky projektu COLridor na podporu oživení tohoto místa - důležitého biocentra v centru města Prahy.</p>
-
-<h4>24. května 2017 / Praha - Procházka Klíčovskými sady</h4>
-<p>Lektorujeme naučnou vycházku po ovocném Klíčovském sadu, tentokrát na téma „sad jako prostřený stůl”. Vycházka proběhla v rámci spolupráce CooLAND s organizací Na ovoce.</p>	
-	
-<h4>9. května 2017 / Praha, Z pokoje do pokoje - Potkávací den v pokojích</h4>
-<p>Potkávací den členů KPZ CooLAND v novém výdejním místě - veřejné nábytkové dílně Z pokoje do pokoje - při příležitosti zahájení nové sezóny.</p>	
-	
-<h4>2. května 2017 / Praha, Langhans - Centrum Člověka v tísni - Jedlá krajina</h4>
-<p>Pod názvem „Jedlá krajina - otevřete si restauraci pro včely” jsme uspořádali ve spolupráci s včelařským spolkem Mája tématický večer o včelách, jejich významu v ekosystému a důležitosti včelí pastvy.</p>	
-	
-<h4>1. května 2017 / Praha, Lysolajský sad, Májová vycházka</h4>
-<p>Lektorujeme naučnou vycházku po starém ovocném sadu, kde se návštěvníci dozvěděli zajímavosti nejen o historii sadu v Houslích, ale naučili se poznávat místní ptáky podle zpěvu. Vycházka proběhla v rámci spolupráce CooLAND s organizací Na ovoce.</p>	
-	
-<h4>5. dubna 2017 / Brno, Masarykova univerzita, konference Výkvěty 2017 - vernisáž výstavy</h4>
-<p>Naše výstava „Láska ke krajině prochází žaludkem” si udělala výlet do Brna, kde měla vernisáž na Fakultě sociálních studií Masarykovy univerzity.</p>	
-	
-<h4>15. března 2017 / Praha, Havran Café, Informační schůzka KPZ CooLAND</h4>
-<p>KPZ CooLAND se připravuje na svou třetí sezónu, a tak se v Havran Café schází koordinátoři, zemědělci i zájemci o členství. </p>
-	
-<h4>18. - 25. ledna 2017 / Výlet do Berlína</h4>
-<p>V rámci projektu „Vzdělávání pro přístup k půdě“ (Learning for Access to Land) proběhl první výměnný program, který pořádala organizace Die Agronauten v Berlíně. Zástupci organizací zabývající se přístupem k půdě pro začínající zemědělce z Německa, České republiky, Řecka, Rumunska a Skotska se společně zúčastnili šestidenního programu, který zahrnoval exkurze, síťování s ostatními účastníky a předávání informací o projektech. Součástí programu byla i účast na demonstraci „Wir haben es satt“. Hlavní část programu byla návštěva tří německých pozemkových spolků - BioBoden, Ökonauten a Kulturland: </p>
-<p><a href="http://www.accesstoland.eu/Learning-towards-Access-to-Land" target="_blank">http://www.accesstoland.eu/Learning-towards-Access-to-Land</a></p>	
-	
-<h4>9. prosince / Praha, Venuše ve Švehlovce - Fórum potravinové suverenity -</h4>
-<p>Potravinová suverenita podporuje všechny, které zajímá téma neudržitelnosti našeho zemědělsko-potravinářského systému. CooLAND samozřejmě nemůže chybět i jako jeden z leaderů vědecko-výzkumné pracovní skupiny: Přístup k půdě:</p>
-<p><a href="https://potravinovasuverenita.cz/akce/" target="_blank">https://potravinovasuverenita.cz/akce/</a></p>	
-	
-<h4>9. listopadu / Praha, Smart Café – Krajina k nakousnutí</h4>
-<p>Mluvíme o tom, jakým způsobem spotřebitelé ve městě ovlivňují podobu venkovské krajiny a jaké alternativy existují pro naši každodenní volbu potravin. Diskuze proběhla společně se zástupci iniciativy Na ovoce: </p>
-<p><a href="http://www.zelenykruh.cz/na-cem-pracujeme/smart-cafe/smart-cafe-krajina-k-nakousnuti" target="_blank">http://www.zelenykruh.cz/na-cem-pracujeme/smart-cafe/smart-cafe-krajina-k-nakousnuti</a></p>	
-	
-<h4>8. listopadu 2016 / Havran Café, Večírek KPZ CooLAND – rekapitulace sezóny</h4>
-<p>Při příležitosti posledního výdeje v sezóně pořádáme večírek s rekapitulací toho, co se událo a jaké jsou naše plány na příští rok.</p>
-	
-<h4>22. října 2016 / Praha, Menu pro změnu</h4>
-<p>Ve spolupráci s Glopolis jsme přispěli k šíření myšlenky komunitou podporovaného zemědělství na mezinárodním fóru Menu pro změnu:</p>
-<p><a href="https://www.eatresponsibly.eu/cs/news/menu-for-change-international-forum/" target="_blank">https://www.eatresponsibly.eu/cs/news/menu-for-change-international-forum/</a></p>	
-
-<h4>22. října 2016 / Praha, Veletržní palác, Fotograf festival</h4>
-<p>Země/Půda neboli komponovaný večer věnovaný jak jinak než vztahu k Zemi a vztahu k půdě, to vše pod hlavičkou letošního ročníku s názvem Cultura/Natura. CooLAND představil nejen dění kolem KPZ , ale mimo jiné i publikaci “Láska ke krajině prochází žaludkem”.
-</p>
-<p><a href="http://fotografestival.cz/2016/event/zeme-puda" target="_blank">http://fotografestival.cz/2016/event/zeme-puda</a></p>
-
-<h4>17. - 23. října 2016 / Praha, Česká zemědělská univerzita v Praze</h4>
-<p>Již tradiční dokumentární festival, na němž se potkávají filmaři a zajímavá témata z celého světa. Na festivalu se každým rokem podílíme i organizačně a na letošním ročníku jsme měli velkou radost z vítězného snímku Farmáři půdy <a href="http://lsff.cz/joris-van-der-kamp-farmari-pudy/" target="_blank">http://lsff.cz/joris-van-der-kamp-farmari-pudy/</a>, ve kterém to jen srší nápady, jak zacházet s půdou a zároveň si skvěle pochutnat. 
-</p>
-	
-<h4>17. září 2016/ Dětřichovice, Poznej svého farmáře u nás na Lukavě</h4>
-<p>Chystáme se podpořit farmu Lukava při jejím velkém dni otevřených dveří pořádaných v rámci kampaně Ministerstva zemědělství “Poznej svého farmáře”. </p>
-<p><a href="http://www.lukava.net/poznej-sveho-farmare-u-nas-na-lukave/" target="_blank">http://www.lukava.net/poznej-sveho-farmare-u-nas-na-lukave/</a></p>
-
-<h4>16. - 18. září 2016/ Ostrava, Third European CSA Meeting</h4>
-<p>Evropské setkání KPZ, kde CooLAND samozřejmě nemůže chybět i jako jeden z leaderů vědecko-výzkumné sekce.</p>
-<p><a href="http://ostrava.urgenci.net/" target="_blank">http://ostrava.urgenci.net/</a></p>
-
-<h4>8. září 2016 / Praha, Vernisáž a křest publikace “Láska ke krajině prochází žaludkem”</h4>
-
-<p>Výstava fotografií Kevina V. Tona o první sezóně komunitou podporovaného zemědělství KPZ CooLAND byla pro tento večer i skvělým setkáním s vámi všemi při křtu naší první publikace “Příběh komunitou podporovaného zemědělství”, která vznikla ve spolupráci s organizací PRO-BIO Liga.</p>
-<p>Výstavu hostí celé září galerie Langhans - Centrum Člověka v tísni.</p>
-<p><a href="https://www.clovekvtisni.cz/cs/kalendar/vernisaz-vystavy-a-krest-publikace-laska-ke-krajine-prochazi-zaludkem?src=268" target="_blank">https://www.clovekvtisni.cz/cs/kalendar/vernisaz-vystavy-a-krest-publikace-laska-ke-krajine-prochazi-zaludkem?src=268</a></p>
-
-<h4>7. června 2016 / Poděbrady, BIO v regionu Středočeského kraje</h4>
-
-<p>CooLAND přednáší o komunitou podporovaném zemědělství jakožto jedné z cest k potravinám z blízka na prvním z cyklu seminářů <a href="http://bioinstitut.cz/cz/bio-v-regionu-stredoceskeho-kraje" target="_blank">„BIO V REGIONU“</a>. Projekt chce upozornit na to, že nákupem regionálních biopotravin každý z nás podporuje jak místní ekonomiku, tak krajinu.</p>
-
-<h4>21. května 2016 / Praha, Restaurant Day</h4>
-
-<p>V našem sídle na Praze 6 hostíme kolemjdoucí lokálními potravinami a vysvětlujeme, jak pozitivně ovlivňujeme zemědělskou krajinu tím, že si tak hezky pochutnáváme na dobrém pití a jídle z místních zdrojů. </p>
-
-<h4>17. května 2016 / Praha, BUZZ Talks: Kompostování a pěstování ve městě</h4>
-
-<p>A opět pozváni na BUZZ Talks, tentokráte v Altě při debatě nejen o spotřebitelských KPZ a dobrém jídle, které si lze vypěstovat i v hlavním městě.</p>
-
-<p><a href="http://www.motivp.com/shop/video/2-cast-Moderovana-diskuze-s-recniky-na-tema-Kompostovani-a-pestovani-ve-meste" target="_blank">http://www.motivp.com/shop/video/2-cast-Moderovana-diskuze-s-recniky-na-tema-Kompostovani-a-pestovani-ve-meste</a></p>
-
-<h4>14. května 2016 / Zábřeh, Jídlo na ulici</h4>
-
-<p>V Moravském Zábřehu se účastníme street food festivalu, kde propagujeme myšlenky komunitou podporovaného zemědělství a vaříme kávu BirdSong Coffe</p>
-
-<h4>14. května 2016 / Praha, Férová Letná</h4>
-
-<p>Na pikniku na Letné představujeme myšlenky ekologického hospodaření v krajině a nabízíme oddech při listování naší krajinářskou knihovničkou.</p>
-
-<h4>1.května 2016 / Olomouc, Ekologické dny</h4>
-
-<p>Vypravili jsme se do Olomouce na Ekojarmark, na němž jsme propagovali myšlenky KPZ.</p> 
-
-<h4>27. dubna 2016 / Praha, NGO Market</h4>
-
-<p>Nenechali jsme si ujít aktivní účast na tradičním veletrhu neziskovek NGO Market podpořeného Nadací Forum 2000.</p>
-
-<p><iframe width="560" height="315" src="https://www.youtube.com/embed/C_Ho2soOHPg" frameborder="0" allowfullscreen></iframe></p>
-
-<h4>13. března 2016 / Jeden svět</h4>
-
-<p>Zúčastnili jsem se diskuse o mizející půdě na <a href="http://www.ceskatelevize.cz/porady/10000000244-jeden-svet-2016/216254000800006-mizejici-puda/" target="_blank">festivalu Jeden svět</a></p>
-
-<h4>28. listopadu 2015 / Pracovna na Žižkově, kurz “Zakládáme potravinovou komunitu“</h4>
-
-<p>Účastníme se jako lektoři na kurzu určeném pro ty, kteří uvažují o založení vlastní KPZky.</p>
-
-<h4>26. listopadu 2015 / Veletržní palác, BUZZ Talks: Produkce potravin</h4>
-
-<p>Přednášíme o problémech, které s sebou nese současná produkce potravin ve vztahu k zemědělské půdě. A nabízíme také řešení - pozemkové úpravy, nebo podpora šetrně hospodařících zemědělců třeba zapojením se do KPZ. </p>
-
-<p><a href="http://www.motivp.com/…/video/Plytvani-jidlem-Dil-1-Produkce" target="_blank">http://www.motivp.com/…/video/Plytvani-jidlem-Dil-1-Produkce</a></p>
-
-<h4>6. listopadu 2015 / Olomouc, “První setkání komunitou podporovaného zemědělství v ČR”</h4>
-
-<p>Na prvním setkání českých KPZek samozřejmě nesmíme chybět.</p>
-<p><a href="http://www.kpzinfo.cz/news/prvni-setkani-komunitou-podporovaneho-zemedelstvi-v-cr1/" target="_blank">http://www.kpzinfo.cz/news/prvni-setkani-komunitou-podporovaneho-zemedelstvi-v-cr1/</a></p>
-
-<h4>17. - 18. října 2015 / Národní technická knihovna v Praze, “Street Food Festival”</h4>
-
-<p>V sychravém podzimním počasí rozbalujeme náš VEGTRO stánek před budovou NTK. Vaříme vydatnou zeleninovou polévku, pomazánky a pečeme koláče, abychom krom výkladu a letáčků měli další názorné argumenty, proč být součástí komunitou podporovaného zemědělství. Propagace to je záhul :-).</p>
-
-<h4>12 - 16. října 2015 / Česká zemědělská univerzita v Praze, LIFE SCIENCES FILM FESTIVAL</h4>
-
-<p>Tradičně se podílíme na organizace mezinárodní soutěžní filmové přehlídky filmů přibližujících vědecká témata.</p>
-
-<p><a href="http://www.lsff.cz" target="_blank">www.lsff.cz</a></p>
-
-<h4>12. října 2015 / Fakulta životního prostředí ČZU v Praze Výstava “Láska ke krajině prochází žaludkem”</h4>
-<p>Life Sciences Film Festival otevíráme vernisáží výstavy fotografií o příběhu první sezóny komunitou podporovaného zemědělství KPZ CooLAND. Není to jen o zelenině! Je to hlavně o pochopení principů ekologického zemědělství, radosti z dobrého jídla, o pražácích pracujících na poli, podpoře harmonické krajiny, přátelství a bujarých večírcích. To vše je KPZ CooLAND!</p>
-
-<h4>24. - 25. září 2015 / Studio Alta, “Fórum potravinové suverenity”</h4>
-<p>Účastníme se prvního českého fóra potravinové suverenity, jehož cílem je propojovat všechny, které zajímá téma neudržitelnosti našeho zemědělsko-potravinářského systému, abychom mohli společně hledat nové cesty k potravinám.</p>
-
-<h4>19. září 2015 / Zažít město jinak - Karlín, “Zažít město jinak: VEGTRO”</h4>
-<p>Účastníme se s vlastním stánkem sousedských slavností v pražském Karlíně.
-Propagaci komunitou podporovaného zemědělství a ochrany zemědělské krajiny jsme pojali po svém - VEGTRO - nová linka metra, která vám přiveze nejen zeleninu, ale i zapomenuté příběhy. Na našem stánku se návštěvníci mohli dozvědět o tom co je to KPZ, prohlédnout si fotografie, diskutovat a také ochutnávat dobroty vyrobené ze zeleniny od našeho zemědělce. </p>
-
-<h4>9. května 2015 / “Férová Letná”</h4>
-<p>Propagujeme aktivity CooLAND a také komunitou podporované zemědělství, mobilní výstava fotografií KPZ CooLAND</p>
-
-<h4>14. dubna 2015 / Havran Café, “Zakládáme KPZ CooLAND”</h4>
-<p>Na zakládací schůzce KPZ CooLAND podepsalo Dohodu se zemědělcem a Kodex členů KPZ CooLAND 32 lidí. To jsme opravdu nečekali :-).</p>
+<h4>Komunitou podporované zemědělství KPZ CooLAND</h4>
+<a href="https://kpzcooland.tumblr.com" target="_blank">KPZ CooLAND</a>
+<p>V roce 2015 jsme v Karlíně založili iniciativu KPZ CooLAND na principech <a href="https://www.kpzinfo.cz" target="_blank">komunitou podporovaného zemědělství</a> a začali přímo propojovat ekologické zemědělce, odběratele a další lidi, kteří vytváří ve svém okolí pozitivní hodnoty. Chtěli jsme zjistit, jestli model KPZ funguje a předávat naše zkušenosti dál. Zároveň jsme chtěli ukázat, jak každý z nás může přispět k realizaci vize zdravé zemědělské krajiny. Proto píšeme na <a href="https://blog.cooland.cz" target="_blank">blog.cooland.cz</a> seriál „Z deníku KPZ CooLAND“ a otevřeně sdílíme naše know-how, abychom podpořili vznik nových KPZtek. Začali jsme také úzce spolupracovat s <a href="https://www.asociaceampi.cz/" target="_blank">Asociací místních potravinových iniciativ</a> v oblasti vzdělávání a propagace KPZ.</p>
+<p>KPZ CooLAND nám dává možnost nahlédnout do života drobných ekologických zemědělců a pochopit jejich potřeby. Začínali jsme spoluprací se <a href="https://tacheci.webnode.cz/" target="_blank">Statkem Karla Tachecího</a> a postupem času přibývají další: <a href="https://www.lukava.net/" target="_blank">Rodinná farma Lukava</a>, <a href="https://www.biostatek.cz" target="_blank">Ekofarma biostatek ve Valči</a>,  <a href="https://www.podstraznym.cz/" target="_blank">Hospodářství Pod Strážným Vrchem v Merbolticích</a> a Dáša Tománková s <a href="https://www.polopo.cz/" target="_blank">Polopo</a>. Zároveň se rozšiřuje i počet členů - odběratelů; zatímco v roce 2015 nás bylo 37, v roce 2018 jsme měli tři odběrové skupiny (70 zelenina, 26 sýry, 32 sýry).</p>
+<a href="https://kpzcooland.tumblr.com" target="_blank">Více o KPZ CooLAND zde</a>
+<a href="https://www.kpzinfo.cz" target="_blank">Více o KPZ zde</a>
+<p>Chcete vědět víc o komunitou podporovaném zemědělství, uspořádat seminář, nebo poradit se založením a organizací vlastní potravinové iniciativy? Napište <a href="https://www.cooland.cz/sarka" target="_blank">Šárce Krčílkové</a><p>
 
 </div>
 </body>
