--- a/akce.html
+++ b/akce.html
@@ -53,7 +53,7 @@
 
 <h4>Láska ke krajině prochází žaludkem</h4>
 <p>„Láska ke krajině prochází žaludkem“ je společný projekt CooLAND a fotografa <a href="https://www.kevin-v-ton.com" target="_blank">Kevina V. Tona</a>, který v letech 2015–2016 dokumentoval dění v KPZ CooLAND svými osobitými černobílými fotografiemi. Zajímalo nás, co komunitou podporované zemědělství přináší jednotlivým aktérům, tedy zejména zemědělcům, odběratelům a koordinátorům. Ptali jsme se jich, proč jsou součástí KPZ. Propojili jsme pestré příběhy s fotografiemi, vytvořili v roce 2015 výstavu a o rok později doprovodnou publikaci. Chceme ukázat, že láska ke krajině nemůže vzniknout jen zájmem o samotné jídlo. Může ale vzniknout zájmem o ty, kteří jídlo pěstují a vyrábí. Vzniká, když nám začne záležet na nich, na způsobu, jakým hospodaří a na vzájemných vztazích, které při tom vznikají. Když nám začne záležet na nás samotných. Když začneme chápat jídlo a svět v souvislostech.</p>	
-</p>Publikace vzbudila zájem také u našich zahraničních partnerů. V roce 2018 jsme ji vydali v anglickém jazyce, abychom ji mohli sdílet  na evropském setkání KPZtek: <a href="https://http://urgenci.net/csa-beyond-borders-launched-in-thessaloniki/" target="_blank">„CSA Beyond Borders“</a> v řeckém Thessaloniki.<p>
+</p>Publikace vzbudila zájem také u našich zahraničních partnerů. V roce 2018 jsme ji vydali v anglickém jazyce, abychom ji mohli sdílet  na evropském setkání KPZtek: <a href="https://urgenci.net/csa-beyond-borders-launched-in-thessaloniki/" target="_blank">„CSA Beyond Borders“</a> v řeckém Thessaloniki.<p>
 <p>Láska ke krajině prochází žaludkem -<p>
 <p>Our love to landscapes goes through our tummies -<p>	
 <p>Galerie Lásky ke krajině:<p>
