--- a/akce.html
+++ b/akce.html
@@ -56,7 +56,7 @@
 </p>Publikace vzbudila zájem také u našich zahraničních partnerů. V roce 2018 jsme ji vydali v anglickém jazyce, abychom ji mohli sdílet  na evropském setkání KPZtek: <a href="https://urgenci.net/csa-beyond-borders-launched-in-thessaloniki/" target="_blank">„CSA Beyond Borders“</a> v řeckém Thessaloniki.<p>
 <p>Láska ke krajině prochází žaludkem -<p>
 <p>Our love to landscapes goes through our tummies -<p>	
-<p>Galerie Lásky ke krajině:<p>
+<a href="https://laskakekrajine.tumblr.com/" target="_blank">Galerie Lásky ke krajině</a>
 <p>Pokud máte zájem o tištěnou publikaci nebo chcete fotografie vystavit u Vás, obraťte se na <a href="https://www.cooland.cz/alena" target="_blank">Alenu Wranovou.</a><p>
 <p>
 	
