--- a/akce.html
+++ b/akce.html
@@ -54,9 +54,9 @@
 <h4>Láska ke krajině prochází žaludkem</h4>
 <p>„Láska ke krajině prochází žaludkem“ je společný projekt CooLAND a fotografa <a href="https://www.kevin-v-ton.com" target="_blank">Kevina V. Tona</a>, který v letech 2015–2016 dokumentoval dění v KPZ CooLAND svými osobitými černobílými fotografiemi. Zajímalo nás, co komunitou podporované zemědělství přináší jednotlivým aktérům, tedy zejména zemědělcům, odběratelům a koordinátorům. Ptali jsme se jich, proč jsou součástí KPZ. Propojili jsme pestré příběhy s fotografiemi, vytvořili v roce 2015 výstavu a o rok později doprovodnou publikaci. Chceme ukázat, že láska ke krajině nemůže vzniknout jen zájmem o samotné jídlo. Může ale vzniknout zájmem o ty, kteří jídlo pěstují a vyrábí. Vzniká, když nám začne záležet na nich, na způsobu, jakým hospodaří a na vzájemných vztazích, které při tom vznikají. Když nám začne záležet na nás samotných. Když začneme chápat jídlo a svět v souvislostech.</p>	
 </p>Publikace vzbudila zájem také u našich zahraničních partnerů. V roce 2018 jsme ji vydali v anglickém jazyce, abychom ji mohli sdílet  na evropském setkání KPZtek: <a href="https://urgenci.net/csa-beyond-borders-launched-in-thessaloniki/" target="_blank">„CSA Beyond Borders“</a> v řeckém Thessaloniki.<p>
-<a href="https://bit.ly/2FdVvN5" target="_blank">Láska ke krajině prochází žaludkem PDF</a>
-<a href="https://bit.ly/2HuhOld" target="_blank">Our love to landscapes goes through our tummies PDF</a>	
-<a href="https://laskakekrajine.tumblr.com/" target="_blank">Galerie Lásky ke krajině</a>
+<p><a href="https://bit.ly/2FdVvN5" target="_blank">Láska ke krajině prochází žaludkem PDF</a><p>
+<p><a href="https://bit.ly/2HuhOld" target="_blank">Our love to landscapes goes through our tummies PDF</a><p>	
+<p><a href="https://laskakekrajine.tumblr.com/" target="_blank">Galerie Lásky ke krajině</a><p>
 <p>Pokud máte zájem o tištěnou publikaci nebo chcete fotografie vystavit u Vás, obraťte se na <a href="https://www.cooland.cz/alena" target="_blank">Alenu Wranovou.</a><p>
 <p>
 	
