--- a/akce.html
+++ b/akce.html
@@ -60,8 +60,7 @@
 <p>Pokud máte zájem o tištěnou publikaci nebo chcete fotografie vystavit u Vás, obraťte se na <a href="https://www.cooland.cz/alena" target="_blank">Alenu Wranovou.</a><p>
 
 <h4>Blog</h4>
-<p>V roce 2016 jsme založili blog s jasným cílem: šířit vizi zdravé zemědělské krajiny a pozitivním způsobem inspirovat široké okolí ukázkami konkrétních příběhů, jak téhle vize může dosáhnout každý z nás. Příspěvky pokrývají zásadní témata pro CooLAND jakými jsou: agroekologie, vlastnictví a užívání zemědělské půdy, místní potravinové systémy, ochrana půdy a tvorba krajiny. Jedná se o rozhovory, deníkové zápisky, reportáže i úvahy. Stálé místo na blogu má například seriál 
-	„Z deníku KPZ CooLAND“, který zachycuje vznik a vývoj jedné z iniciativ komunitou podporovaného zemědělství. Další série příspěvků se věnuje překážkám přístupu k půdě pro agroekologické zemědělce. Představujeme nejen vlastní aktivity, ale rádi přinášíme inspiraci odjinud, ať už z domova, nebo ze zahraničí.<p>	
+<p>V roce 2016 jsme založili blog s jasným cílem: šířit vizi zdravé zemědělské krajiny a pozitivním způsobem inspirovat široké okolí ukázkami konkrétních příběhů, jak téhle vize může dosáhnout každý z nás. Příspěvky pokrývají zásadní témata pro CooLAND jakými jsou: agroekologie, vlastnictví a užívání zemědělské půdy, místní potravinové systémy, ochrana půdy a tvorba krajiny. Jedná se o rozhovory, deníkové zápisky, reportáže i úvahy. Stálé místo na blogu má například seriál „Z deníku KPZ CooLAND“, který zachycuje vznik a vývoj jedné z iniciativ komunitou podporovaného zemědělství. Další série příspěvků se věnuje překážkám přístupu k půdě pro agroekologické zemědělce. Představujeme nejen vlastní aktivity, ale rádi přinášíme inspiraci odjinud, ať už z domova, nebo ze zahraničí.<p>	
 <p><a href="https://blog.cooland.cz" target="_blank">blog.cooland.cz</a><p>
 <p>Máte tip na zajímavý příspěvek? Chcete sdílet příběh vaší cesty do krajiny? Napište nám na info@cooland.cz<p>	
 	
