--- a/akce.html
+++ b/akce.html
@@ -64,6 +64,11 @@
 <p><a href="https://blog.cooland.cz" target="_blank">blog.cooland.cz</a><p>
 <p>Máte tip na zajímavý příspěvek? Chcete sdílet příběh vaší cesty do krajiny? Napište nám na info@cooland.cz<p>	
 	
+<h4>Návrhy výsadeb pro Sázíme stromy</h4>
+<p>Zemědělská krajina potřebuje zeleň, aby byla v té správné kondici a CooLAND umí poradit, jak správně umístit tyhle krajinotvorné parťáky do krajiny. Od roku 2018 jsme nastartovali spolupráci se spolkem <a href="https://www.sazimestromy.cz/" target="_blank">Sázíme stromy</a>, který propojuje firmy, obce a dobrovolníky a jak již název napovídá, společně sází stromy na místech, kde je to nejvíce potřeba. CooLAND zpracovává  návrhy výsadby stromků v dané lokalitě dle konkrétních místních požadavků tak, abychom přispěli k ochraně a tvorbě krajiny. Baví nás sledovat, jak stromky z našich návrhů dělají radost lidem i přírodě a jsme moc rádi, že můžeme být součástí skvělého týmu. <p>	
+<p>Chcete také více zeleně v krajině? Obraťte se na <a href="https://www.cooland.cz/katka" target="_blank">Kateřinu Zímovou.</a><p>
+	
+	
 	
 </div>
 </body>
