--- a/akce.html
+++ b/akce.html
@@ -68,6 +68,10 @@
 <p>Zemědělská krajina potřebuje zeleň, aby byla v té správné kondici a CooLAND umí poradit, jak správně umístit tyhle krajinotvorné parťáky do krajiny. Od roku 2018 jsme nastartovali spolupráci se spolkem <a href="https://www.sazimestromy.cz/" target="_blank">Sázíme stromy</a>, který propojuje firmy, obce a dobrovolníky a jak již název napovídá, společně sází stromy na místech, kde je to nejvíce potřeba. CooLAND zpracovává  návrhy výsadby stromků v dané lokalitě dle konkrétních místních požadavků tak, abychom přispěli k ochraně a tvorbě krajiny. Baví nás sledovat, jak stromky z našich návrhů dělají radost lidem i přírodě a jsme moc rádi, že můžeme být součástí skvělého týmu. <p>	
 <p>Chcete také více zeleně v krajině? Obraťte se na <a href="http://www.cooland.cz/katka" target="_blank">Kateřinu Zímovou.</a><p>
 	
+<h4>Krajinářské exkurze do sadů s Na Ovoce</h4>
+<p>Ovocné sady jsou důležitým prvkem zdravé zemědělské krajiny a zároveň její výkladní skříní. Krásně se na nich ukazuje, jak je naše jídlo spojené s ochranou přírody. Rádi v CooLAND pořádáme nejen přednášky o důležitosti krajinné ekologie, ale ještě raději exkurze přímo v terénu. Proto spolupracujeme i se spolkem <a href="https://na-ovoce.cz/web/" target="_blank">Na Ovoce</a>, s nimiž nás spojuje zájem o zdravou zemědělskou krajinu. Konkrétně zde poskytujeme poradenství v oblasti krajinné ekologie a lektorujeme <a href="https://na-ovoce.cz/web/category/vylety" target="_blank">odborné krajinářské exkurze</a> do sadů, kde přibližujeme jejich <a href="https://na-ovoce.cz/web/sberacuv-pruvodce-po-prazskych-sadech" target="_blank">přírodovědný význam.</a><p>	
+<p>Chcete naplánovat krajinářskou exkurzi šitou přímo na míru? Obraťte se na <a href="http://www.cooland.cz/katka" target="_blank">Kateřinu Zímovou.</a><p>
+	
 	
 	
 </div>
