--- a/akce.html
+++ b/akce.html
@@ -72,8 +72,10 @@
 <p>Ovocné sady jsou důležitým prvkem zdravé zemědělské krajiny a zároveň její výkladní skříní. Krásně se na nich ukazuje, jak je naše jídlo spojené s ochranou přírody. Rádi v CooLAND pořádáme nejen přednášky o důležitosti krajinné ekologie, ale ještě raději exkurze přímo v terénu. Proto spolupracujeme i se spolkem <a href="https://na-ovoce.cz/web/" target="_blank">Na Ovoce</a>, s nimiž nás spojuje zájem o zdravou zemědělskou krajinu. Konkrétně zde poskytujeme poradenství v oblasti krajinné ekologie a lektorujeme <a href="https://na-ovoce.cz/web/category/vylety" target="_blank">odborné krajinářské exkurze</a> do sadů, kde přibližujeme jejich <a href="https://na-ovoce.cz/web/sberacuv-pruvodce-po-prazskych-sadech" target="_blank">přírodovědný význam.</a><p>	
 <p>Chcete naplánovat krajinářskou exkurzi šitou přímo na míru? Obraťte se na <a href="http://www.cooland.cz/katka" target="_blank">Kateřinu Zímovou.</a><p>
 	
-	
-	
+<h4>Poradenství pro vlastníky pozemků</h4>
+<p>Naše odborné znalosti z oblasti krajinné ekologie, pozemkových úprav a ochrany přírody a krajiny využíváme v boji proti suchu, nedostatku zeleně a úbytku rostlin a živočichů v zemědělské krajině. Kdokoli, kdo vlastní alespoň 1 metr čtvereční zemědělské půdy, může ovlivnit její stav a my jsme tu od toho, abychom mu poradili jak na to. Jezdíme za vlastníky do terénu a bavíme se s nimi o možnostech, jak na jejich pozemky dostat více zeleně, zadržet vodu, anebo přilákat volně žijící živočichy.<p>
+<p>Vlastníte pozemek a chcete na něm vidět více života? Obraťte se na <a href="http://www.cooland.cz/katka" target="_blank">Kateřinu Zímovou.</a><p>	
+
 </div>
 </body>
   
