--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
 
 <div id="main" class="container">
-  <img src="img/Laska_web.jpg" width="" height="" alt="homepage_image">
-  <a href="https://blog.cooland.cz/post/183495582384/l%C3%A1ska-ke-krajin%C4%9B-m%C3%AD%C5%99%C3%AD-do-karl%C3%ADna">více informací naleznete zde</a>	
+  <img src="img/Slavik_cb.jpeg" width="" height="" alt="homepage_image">
+  
 	
 </div>
 <br>
