--- a/vratka.html
+++ b/vratka.html
@@ -67,17 +67,16 @@
 
 <h5>V CooLAND mám na starosti:</h5>
 
-  <p>V CooLAND mám na starost šíření nových, často bláznivých myšlenek a nápadů formou různých přednášek, příspěvků, seminářů a setkání. Zároveň se soustředím na hledání nových kontaktů nejen v České republice, ale i v zahraničí. Baví mne propojení praxe s výzkumem, proto se zaměřuji i na zpracování vědeckých studií s přesahem do praxe. Aktuálně koordinuji <a href="http://ec.europa.eu/programmes/erasmus-plus/projects/eplus-project-details-page/?nodeRef=workspace://SpacesStore/778039e5-ac61-4df3-8565-f0006bdf5077" target="_blank">Erasmus + projekt na téma Přístup k půdě</a> pro začínající zemědělce (Access To Land) ve spolupráci s organizací <a href="http://asociaceampi.cz/" target="_blank">AMPI</a>.
-</p>
+  <p>V CooLAND mám na starost šíření nových myšlenek a nápadů formou různých přednášek, seminářů, setkávání či příspěvků na <a href="https://blog.cooland.cz/" target="_blank">blogu CooLAND</a>. Zároveň se soustředím na hledání nových kontaktů nejen v České republice, ale i v zahraničí.</p>
 
   <h5>Mimo CooLAND dělám:</h5>
 
-  <p>Jsem odborná asistentka na Katedře biotechnických úprav krajiny na Fakultě životního prostředí České zemědělské univerzity v Praze, kdy vyučuji Pozemkové úpravy a Land Management. Ve svých vědeckých studiích se zabývám držbou půdy (land tenure security), přístupem k půdě (access to land), managemenem zemědělské krajiny (agricultural land management) a Společnou zemědělskou politikou (Common Agriculture Policy).</p>
-<p><a href="https://www.researchgate.net/profile/Vratislava_Janovska?ev=hdr_xprf&_sg=3ltii6AtWiXxH0WpQM4pkSrJqy89SDm5yaM5xKBk4YDV6zn5pQguajDcRpxBerNu" target="_blank">Research Gate</a></p>
+  <p>Od roku 2018 pracuji jako projektová manažerka v <a href="http://www.asociaceampi.cz/" target="_blank">Asociaci místních potravinových iniciativ</a>, kde se zaměřuji na oblast Spokojení zemědělci - věnuji se tématům jako je přístup k půdě pro agroekologické zemědělce a jejich propojování.</p>
+
 
 <h5>Spolupracuji:</h5>
 
-  <p>Jsem součástí vědeckého týmu CSA Reserch Group spadající pod <a href="http://urgenci.net/csa-research-group-people/" target="_blank">URGENCI</a> a kontaktní osoba při spolupráci s evropskou sítí <a href="http://www.accesstoland.eu/" target="_blank">Access to Land</a>. Úzce spolupracuji s organizací <a href="http://asociaceampi.cz/lide-v-ampi" target="_blank">AMPI</a> a jsem spoluzakladatelkou <a href="https://potravinovasuverenita.cz/my/" target="_blank">Potravinové suverenity</a> v ČR.</p> 
+  <p>Úzce spolupracuji s <a href="http://nadacepropudu.cz/" target="_blank">Nadací Pro půdu</a>, kde působím jako kontaktní osoba za Českou republiku při spolupráci s evropskou sítí <a href="http://www.accesstoland.eu/" target="_blank">Access to Land</a>.</p> 
  
  </div>  
   <br>
