--- a/katka.html
+++ b/katka.html
@@ -68,15 +68,15 @@
 
 <h5>V CooLAND mám na starosti:</h5>
 
-  <p>Jako milovník sociálních sítí píšu většinu příspěvků na FB a starám se o komunikaci s veřejností. Pracuji jako lektor seminářů a exkurzí. Pracuji převážně v terénu, sleduji, pro koho všeho je domovem zemědělská krajina, v níž se hospodaří šetrně (rozuměj přírodovědné průzkumy) a vytvářím z krajiny domov pro ty, kteří ho hledají (rozuměj krajinotvorné projekty). Aktuálně pracuji na projektu s iniciativou <a href="https://na-ovoce.cz/" target="_blank">Na Ovoce</a> na sérii exkurzí do pražských sadů.</p>
+  <p>Pracuji převážně v terénu, sleduji, pro koho všeho je domovem zemědělská krajina (rozuměj realizuji přírodovědné průzkumy) a vytvářím z krajiny domov pro ty, kteří ho hledají (rozuměj navrhuji krajinotvorné projekty). Aktuálně lektoruji exkurze do ovocných sadů pro <a href="https://na-ovoce.cz/" target="_blank">Na Ovoce</a> a pro <a href="https://www.sazimestromy.cz/" target="_blank">Sázíme Stromy</a> zpracovávám návrhy výsadeb a radím, jak pomocí zeleně co nejvíce krajině prospět.</p>
 
   <h5>Mimo CooLAND dělám:</h5>
 
-  <p>Mimo CooLAND jsem standardně zahalena v blátě, křoví a goretexu a jako krajinný ekolog na volné noze zpracovávám přírodovědné průzkumy a krajinářské posudky pro EIA, projektuji krajinnou zeleň a nacházím řešení, jak kombinovat lidskou činnost s ochranou přírody. Občas se musím ale i slušně obléknout, jelikož pracuji i jako dramaturg festivalu <a href="http://lsff.cz/" target="_blank">Life Sciences Film Festival</a>, představujícího soutěžní přehlídku filmů o přírodních vědách.</p>
+  <p>Mimo CooLAND jsem standardně zahalena v blátě, křoví a goretexu a jako <a href="https://navolnenoze.cz/prezentace/katerina-zimova/" target="_blank">krajinný ekolog na volné noze</a> zpracovávám přírodovědné a krajinářské posudky, projektuji krajinnou zeleň, hodnotím a href="http:https://www.mzp.cz/cz/hodnoceni_vlivu_zasahu_priroda_krajina" target="_blank">vlivy zásahů na ochranu přírody</a> a baví mne hledat řešení jak pomáhat přírodě, i když chceme nadále být její součástí.</p>
 
 <h5>Spolupracuji:</h5>
 
-  <p>Jsem členem <a href="http://www.cso.cz/" target="_blank">České společnosti ornitologické</a> a <a href="http://www.cmkpu.cz/" target="_blank">Českomoravské komory pro pozemkové úpravy</a>. Spolupracuji se společností <a href="http://www.harvestfilms.cz/" target="_blank">Harvest films</a> na realizaci vzdělávacích seminářů s dokumentárními filmy.</p> 
+  <p>Jsem členem <a href="http://www.cso.cz/" target="_blank">České společnosti ornitologické</a> a <a href="http://www.cmkpu.cz/" target="_blank">Českomoravské komory pro pozemkové úpravy</a>. Spolupracuji se společností <a href="http://www.harvestfilms.cz/" target="_blank">Harvest films</a> na realizaci vzdělávacích seminářů s dokumentárními filmy a s <a href="http://https://collcoll.cc/" target="_blank">COLL COLL</a> na realizaci architektonických řešení příznivých pro přírodu.</p> 
  
  </div> 
  
