--- a/katka.html
+++ b/katka.html
@@ -72,11 +72,11 @@
 
   <h5>Mimo CooLAND dělám:</h5>
 
-  <p>Mimo CooLAND jsem standardně zahalena v blátě, křoví a goretexu a jako <a href="https://navolnenoze.cz/prezentace/katerina-zimova/" target="_blank">krajinný ekolog na volné noze</a> zpracovávám přírodovědné a krajinářské posudky, projektuji krajinnou zeleň, hodnotím a href="http:https://www.mzp.cz/cz/hodnoceni_vlivu_zasahu_priroda_krajina" target="_blank">vlivy zásahů na ochranu přírody</a> a baví mne hledat řešení jak pomáhat přírodě, i když chceme nadále být její součástí.</p>
+  <p>Mimo CooLAND jsem standardně zahalena v blátě, křoví a goretexu a jako <a href="https://navolnenoze.cz/prezentace/katerina-zimova/" target="_blank">krajinný ekolog na volné noze</a> zpracovávám přírodovědné a krajinářské posudky, projektuji krajinnou zeleň, hodnotím <a href="http:https://www.mzp.cz/cz/hodnoceni_vlivu_zasahu_priroda_krajina" target="_blank">vlivy zásahů na ochranu přírody</a> a baví mne hledat řešení jak pomáhat přírodě, i když chceme nadále být její součástí.</p>
 
 <h5>Spolupracuji:</h5>
 
-  <p>Jsem členem <a href="http://www.cso.cz/" target="_blank">České společnosti ornitologické</a> a <a href="http://www.cmkpu.cz/" target="_blank">Českomoravské komory pro pozemkové úpravy</a>. Spolupracuji se společností <a href="http://www.harvestfilms.cz/" target="_blank">Harvest films</a> na realizaci vzdělávacích seminářů s dokumentárními filmy a s <a href="http://https://collcoll.cc/" target="_blank">COLL COLL</a> na realizaci architektonických řešení příznivých pro přírodu.</p> 
+  <p>Jsem členem <a href="http://www.cso.cz/" target="_blank">České společnosti ornitologické</a> a <a href="http://www.cmkpu.cz/" target="_blank">Českomoravské komory pro pozemkové úpravy</a>. Spolupracuji se společností <a href="http://www.harvestfilms.cz/" target="_blank">Harvest films</a> na realizaci vzdělávacích seminářů s dokumentárními filmy a s <a href="http://https://collcoll.cc" target="_blank">COLL COLL</a> na realizaci architektonických řešení příznivých pro přírodu.</p> 
  
  </div> 
  
