--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <div id="main" class="container">
   <img src="img/Slavik_cb.jpeg" width="" height="" alt="homepage_image">
-  
+  <img src="img/head-baner.png" width="" height="" alt="homepage_image">
 	
 </div>
 <br>
