--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <div id="main" class="container">
   <img src="img/Slavik_cb.jpeg" width="" height="" alt="homepage_image">
   <img src="img/head_banner.png" width="" height="" alt="homepage_image">
-	
+<a href="podepsat petici">https://birdlife.cz/petice-za-krajinu/</a>	
 </div>
 <br>
 <br>
