--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
 
 
 <div id="main" class="container">
-  <img src="img/Slavik_cb.jpeg" width="" height="" alt="homepage_image">
-  <img src="img/head_banner.png" width="" height="" alt="homepage_image">
-<a href="https://birdlife.cz/petice-za-krajinu/">podepsat petici</a>	
+  <img src="img/PF2020_rgb_final.jpg" width="" height="" alt="homepage_image">	
 </div>
 <br>
 <br>
